used z-index to fix github link

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -142,32 +142,28 @@ nav {
         height: 15vh;
     }
     .github {
-        width: 50%;
-        background: #202020;
-        color: #B0B0B0;
+        // width: 50%;
+        // background: #202020;
+        // color: #B0B0B0;
+        // z-index: -1;
     }
     .slant {
         position: relative;
         overflow: hidden;
         color: #fff;
-        background:#535353;
-        z-index: -1;
-        
+        z-index: 0;
     }
     .slant:after {
         content: '';
         position: absolute;
-        top: 0;
+        top: 0; 
         left: 0;
-        width: 100%;
+        width: 100%; 
         height: 100%;
         transform-origin: 100% 0;
         transform: skew(-45deg);
-        background:#202020;
+        background: #202020;
         z-index: -1;
-        a{
-            cursor: pointer;
-        }
     }
     .work {
         width: 30%;
